style.css
/* ... */
  #addedtranslation {
height:230px;
width:90%;
}

#addedcontext {
  height:230px;
width:90%;
}

.sendbtn {
    font-size: 12px !important;
    padding: 5px !important;
  border-radius: 6px !important;
  margin: 4px !important;
  display: table-cell;
  float: left;
}


.moreinfo {
  left: 0;
}



#givecontext {
     left: 55% !important;
  bottom: 0% !important;
   transform: translate(-45%, -0%) !important;
}

#givecontext .conf-modal {
  width: 770px;
}
  
}


@media only screen and (max-width: 500px) {

.translationtips {
  font-size: 16px !important;
    left: 45% !important;
  top: 50% !important;
   transform: translate(-50%, -50%) !important;
}

.translationtips ul {
  width: 90% !important;
}

.translationtips h1 {
  font-size: 30px;
}

#givecontext {
  bottom: 0 !important;
}

#givecontext .popup-container {
width: 100vw;
  position: relative;
  left: 52%;
  margin-left: -52vw;
}

#givecontext textarea{
    height: 90px;
}

.switch {
       left: 50% !important;
    top: 60px !important;
   transform: translate(-50%, -80%) !important;
  }


}

@media only screen and (max-width: 420px) {

#givecontext textarea{
    height: 145px;
}

}

@media only screen and (max-width: 320px) {

.translationtips {
  font-size: 16px !important;
}


.translationtips h1 {
  font-size: 26px !important;
}


#givecontext textarea{
    height: 145px;
}

}

@media screen and (orientation: landscape) {
  .firstoff {
  margin-top: 20%;
}
}

